# cluster-barnes-hut-gravitational

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  data.txt
cluster-application/: CMakeLists.txt  frontend.cpp  frontend.hpp  main.cpp  master.cpp  master.hpp  messages.hpp  slave.cpp  slave.hpp
cluster-deploy/: start.sh
cluster-frontend/: index.html
cluster-networking/: CMakeLists.txt  cluster.cpp  mpi.hpp  transport.cpp
cluster-networking/include/: cluster.hpp  transport.hpp
core-algorithms/: CMakeLists.txt  tree.cpp
core-algorithms/include/: tree.hpp
core-astronomy/: CMakeLists.txt  generator.cpp
core-astronomy/include/: generator.hpp  model.hpp  solver.hpp
core-async/: CMakeLists.txt
core-infrastructure/: CMakeLists.txt  logging.cpp
core-infrastructure/include/: chunks.hpp  logging.hpp  types.hpp
core-math/: CMakeLists.txt
core-math/include/: linalg.hpp  vector.hpp
core-threading/: CMakeLists.txt  ev_loop.cpp  threadpool.cpp
core-threading/include/: ev_loop.hpp  future.hpp  task.hpp  threadpool.hpp
dependencies/: CMakeLists.txt
standalone-application/: CMakeLists.txt  main.cpp
standalone-frontend/: plot_data.py
tests/: CMakeLists.txt  cluster_transport_test.cpp  ev_loop_test.cpp  quadtree_test.cpp  vector_test.cpp
